@@ -220,7 +220,7 @@ public class HighschoolExamScoreServiceImpl implements HighschoolExamScoreServic
                                     .orElse(null);
                             SubjectScoreDTO scoreDTO = subjectScoreMap.getOrDefault(subjectId, new SubjectScoreDTO(subjectId, null, null));
                             return new SubjectScoreDTO(subjectId, subjectName, scoreDTO.getScore());
-                        }).collect(Collectors.toList());
+                        }).toList();
 
                         BigDecimal khtnTotalScore = BigDecimal.ZERO;
                         BigDecimal khxhTotalScore = BigDecimal.ZERO;
@@ -348,7 +348,7 @@ public class HighschoolExamScoreServiceImpl implements HighschoolExamScoreServic
                                     subjectScore.setSubjectName(subjectName);
                                     return subjectScore;
                                 })
-                                .collect(Collectors.toList());
+                                .toList();
 
                         HighschoolExamScoreResponse response = new HighschoolExamScoreResponse();
                         response.setIdentificationNumber(identificationNumber);
@@ -630,7 +630,7 @@ public class HighschoolExamScoreServiceImpl implements HighschoolExamScoreServic
         return subjectGroupSubjectRepository.findBySubjectGroupId(subjectGroupId)
                 .stream()
                 .map(SubjectGroupSubject::getSubjectId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Map<Float, Integer> calculateScoresDistribution(String local, List<Integer> subjectIds) {
@@ -643,22 +643,111 @@ public class HighschoolExamScoreServiceImpl implements HighschoolExamScoreServic
                 Float score = ((Number) data[2]).floatValue();
 
                 if (score != null) {
-                    BigDecimal roundedScore = new BigDecimal(score).setScale(2, RoundingMode.DOWN);
-                    totalScoresByStudent.merge(identificationNumber, roundedScore.floatValue(), Float::sum);
+                    totalScoresByStudent.merge(identificationNumber, score, Float::sum);
                 }
             }
         }
 
         Map<Float, Integer> scoreDistribution = new HashMap<>();
         for (Float totalScore : totalScoresByStudent.values()) {
-            if (totalScore <= 30 && totalScore > 10) {
-                BigDecimal roundedTotalScore = new BigDecimal(totalScore).setScale(2, RoundingMode.DOWN);
+            if (totalScore > 10) {
+                BigDecimal roundedTotalScore = new BigDecimal(totalScore).setScale(1, RoundingMode.HALF_UP);
                 scoreDistribution.merge(roundedTotalScore.floatValue(), 1, Integer::sum);
             }
         }
 
         return scoreDistribution;
     }
+
+    public ResponseData<String> getRankingBySubjectGroupAndLocal(Integer identificationNumber, String subjectGroup, String local) {
+        try {
+            Map<Integer, Float> totalScoresByStudent = calculateScoresForStudent(local, subjectGroup);
+
+            if (local == null || local.isEmpty()) {
+                boolean existsInAnyLocal = highschoolExamScoreRepository.existsByIdentificationNumber(identificationNumber);
+                if (!existsInAnyLocal) {
+                    return new ResponseData<>(ResponseCode.C204.getCode(), "Số báo danh: " + identificationNumber + " không có trong hệ thống.");
+                }
+            } else {
+                boolean existsInLocal = highschoolExamScoreRepository.existsByIdentificationNumberAndLocal(identificationNumber, local);
+                if (!existsInLocal) {
+                    return new ResponseData<>(ResponseCode.C204.getCode(), "Số báo danh: " + identificationNumber + " không có trong " + local);
+                }
+            }
+
+            filterStudentsWithoutCompleteScores(totalScoresByStudent, subjectGroup, local);
+
+            if (!totalScoresByStudent.containsKey(identificationNumber)) {
+                return new ResponseData<>(ResponseCode.C204.getCode(), "Thí sinh không có điểm cho tất cả các môn trong tổ hợp môn này.");
+            }
+
+            List<Float> sortedScores = new ArrayList<>(totalScoresByStudent.values());
+            Collections.sort(sortedScores, Collections.reverseOrder());
+
+            Float studentScore = totalScoresByStudent.get(identificationNumber);
+            int rank = sortedScores.indexOf(studentScore) + 1;
+
+            int totalOfIdentificationNumber = totalScoresByStudent.size();
+
+            String responseMessage = "Thứ hạng của bạn với tổ hợp môn " + subjectGroup + " " +
+                    (local == null || local.isEmpty() ? "trên toàn quốc" : "tại " + local) +
+                    " là " + rank + " trong tổng số " + totalOfIdentificationNumber + " thí sinh.";
+
+            return new ResponseData<>(ResponseCode.C200.getCode(), "Lấy xếp hạng thành công!", responseMessage);
+
+        } catch (Exception e) {
+            log.error("Error fetching ranking by subject group and local", e);
+            return new ResponseData<>(ResponseCode.C207.getCode(), "Đã có lỗi xảy ra trong quá trình lấy xếp hạng, vui lòng thử lại sau.");
+        }
+    }
+
+    private void filterStudentsWithoutCompleteScores(Map<Integer, Float> totalScoresByStudent, String subjectGroup, String local) {
+        List<SubjectGroup> subjectGroups = subjectGroupRepository.findByNameGroup(subjectGroup);
+        List<Integer> subjectIds = new ArrayList<>();
+
+        for (SubjectGroup sg : subjectGroups) {
+            subjectIds.addAll(getSubjectIdsForGroup(sg.getId()));
+        }
+
+        totalScoresByStudent.entrySet().removeIf(entry -> {
+            Integer idNumber = entry.getKey();
+            List<Object[]> scores = local == null || local.isEmpty()
+                    ? highschoolExamScoreRepository.findScoresForSubjectsOnly(subjectIds)
+                    : highschoolExamScoreRepository.findScoresForSubjects(subjectIds, local);
+
+            long count = scores.stream()
+                    .filter(score -> score[0].equals(idNumber) && score[2] != null)
+                    .count();
+
+            return count < subjectIds.size();
+        });
+    }
+
+    private Map<Integer, Float> calculateScoresForStudent(String local, String subjectGroup) {
+        List<SubjectGroup> subjectGroups = subjectGroupRepository.findByNameGroup(subjectGroup);
+        Map<Integer, Float> totalScoresByStudent = new HashMap<>();
+
+        for (SubjectGroup sg : subjectGroups) {
+            List<Integer> subjectIds = getSubjectIdsForGroup(sg.getId());
+            List<Object[]> scoresData = local == null || local.isEmpty()
+                    ? highschoolExamScoreRepository.findScoresForSubjectsOnly(subjectIds)
+                    : highschoolExamScoreRepository.findScoresForSubjects(subjectIds, local);
+
+            for (Object[] data : scoresData) {
+                if (data[0] != null && data[2] != null) {
+                    Integer idNumber = (Integer) data[0];
+                    Float score = ((Number) data[2]).floatValue();
+
+                    if (score != null) {
+                        totalScoresByStudent.merge(idNumber, score, Float::sum);
+                    }
+                }
+            }
+        }
+        totalScoresByStudent.replaceAll((id, score) -> new BigDecimal(score).setScale(1, RoundingMode.HALF_UP).floatValue());
+        return totalScoresByStudent;
+    }
+
 
     @Override
     public ResponseData<List<HighschoolExamScoreResponse>> getAllTop100HighestScoreBySubject(String subjectName, String local) {
@@ -1007,11 +1096,20 @@ public class HighschoolExamScoreServiceImpl implements HighschoolExamScoreServic
         }
     }
 
-
     @Override
-    public ResponseData<List<UserIdentificationResponseDTO>> getAllRegisteredIdentificationNumbers() {
+    public ResponseData<List<UserIdentificationResponseDTO>> getAllRegisteredIdentificationNumbers(Integer userId, Integer identificationNumber) {
         try {
-            List<UserIdentificationNumberRegister> registers = userIdentificationNumberRegisterRepository.findAll();
+            List<UserIdentificationNumberRegister> registers;
+
+            if (userId != null && identificationNumber != null) {
+                registers = userIdentificationNumberRegisterRepository.findByIdUserIdAndIdIdentificationNumber(userId, identificationNumber);
+            } else if (userId != null) {
+                registers = userIdentificationNumberRegisterRepository.findByIdUserId(userId);
+            } else if (identificationNumber != null) {
+                registers = userIdentificationNumberRegisterRepository.findByIdIdentificationNumber(identificationNumber);
+            } else {
+                registers = userIdentificationNumberRegisterRepository.findAll();
+            }
 
             if (registers.isEmpty()) {
                 log.error("No identification number registered found {}", registers);
@@ -1023,7 +1121,7 @@ public class HighschoolExamScoreServiceImpl implements HighschoolExamScoreServic
 
             List<UserIdentificationResponseDTO> userIdentificationResponseList = groupedByUserId.entrySet().stream()
                     .map(entry -> {
-                        Integer userId = entry.getKey();
+                        Integer userIdKey = entry.getKey();
                         List<UserIdentificationNumberRegister> userRegisters = entry.getValue();
 
                         List<RegisteredIdentificationNumberDTO> registeredIdentificationNumberList = userRegisters.stream()
@@ -1032,18 +1130,18 @@ public class HighschoolExamScoreServiceImpl implements HighschoolExamScoreServic
                                         r.getYear(),
                                         r.getStatus().name()
                                 ))
-                                .collect(Collectors.toList());
+                                .toList();
 
                         UserIdentificationNumberRegister firstRegister = userRegisters.get(0);
 
                         return new UserIdentificationResponseDTO(
-                                userId,
+                                userIdKey,
                                 firstRegister.getEmail(),
                                 registeredIdentificationNumberList,
                                 firstRegister.getCreateTime()
                         );
                     })
-                    .collect(Collectors.toList());
+                    .toList();
 
             return new ResponseData<>(ResponseCode.C200.getCode(), "Lấy danh sách đăng kí số báo danh thành công !", userIdentificationResponseList);
 
